tests/derivation/inputvalidation/wrong-params-order/expected
1/1: Building ValidateInput (ValidateInput.idr)
Error: While processing right hand side of genX_wrong_giv_order_autoimpl_rep. Error during reflection: Repetition of an auto-implicit external generator

ValidateInput:1
 25 | genX_wrong_giv_order_autoimpl : Fuel -> (Fuel -> (b, a : Type) -> Gen MaybeEmpty $ Y a b) => Gen MaybeEmpty X
 26 | genX_wrong_giv_order_autoimpl = deriveGen
 27 | 
 28 | genX_wrong_giv_order_autoimpl_rep :
 29 |   Fuel -> (Fuel -> (b, a : Type) -> Gen MaybeEmpty $ Y a b) => (Fuel -> (a, b : Type) -> Gen MaybeEmpty $ Y a b) => Gen MaybeEmpty X
                                                                                                                ^^^^^

Error: While processing right hand side of genX_wrong_gened_order_autoimpl_rep. Error during reflection: Repetition of an auto-implicit external generator

ValidateInput:2
 38 | genX_wrong_gened_order_autoimpl : Fuel -> (Fuel -> Gen MaybeEmpty (b : Type ** a : Type ** Y a b)) => Gen MaybeEmpty X
 39 | genX_wrong_gened_order_autoimpl = deriveGen
 40 | 
 41 | genX_wrong_gened_order_autoimpl_rep :
 42 |   Fuel -> (Fuel -> Gen MaybeEmpty (b : Type ** a : Type ** Y a b)) => (Fuel -> Gen MaybeEmpty (a : Type ** b : Type ** Y a b)) => Gen MaybeEmpty X
                                                                                                                             ^^^^^

Error: While processing right hand side of genX_two_mngf. Error during reflection: Repetition of an auto-implicit external generator

ValidateInput:3
 87 | 
 88 | -- should fail
 89 | genX_two_mngf : Fuel ->
 90 |                 (Fuel -> {m : Nat} -> {n : Nat} -> (g : Fin m) -> (f : Fin n) -> Gen MaybeEmpty $ Z f g) =>
 91 |                 (Fuel -> {m : Nat} -> {n : Nat} -> (g : Fin m) -> (f : Fin n) -> Gen MaybeEmpty $ Z f g) =>
                                                                                                        ^^^^^

Error: While processing right hand side of genX_mgnf_mngf. Error during reflection: Repetition of an auto-implicit external generator

ValidateInput:4
 94 | 
 95 | -- should fail
 96 | genX_mgnf_mngf : Fuel ->
 97 |                  (Fuel -> {m : Nat} -> (g : Fin m) -> {n : Nat} -> (f : Fin n) -> Gen MaybeEmpty $ Z f g) =>
 98 |                  (Fuel -> {m : Nat} -> {n : Nat} -> (g : Fin m) -> (f : Fin n) -> Gen MaybeEmpty $ Z f g) =>
                                                                                                         ^^^^^

